--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.0",
     "typescript": "3.8.3"
   },
   "scripts": {
@@ -45,5 +45,6 @@
       "last 1 safari version"
     ]
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "devDependencies": {}
 }
